<resources>
    <string name="app_name">deliveryfood</string>
    <string name="myPage_name">마이컬리</string>
    <string name="search_name">검색</string>
    <string name="category_name">카테고리</string>
    <string name="recommand_name">추천</string>
    <string name="home_name">홈</string>
    <string name="cart_name">장바구니</string>
    <string name="address_name">배송지</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_id_editText_hint">아이디를 입력해주세요</string>
    <string name="login_pw_editText_hint">비밀번호를 입력해주세요</string>
    <string name="login_signin_btn_text">로그인</string>
    <string name="search_id_textView_text">아이디 찾기</string>
    <string name="search_pw_textView_text">비밀번호 찾기</string>
    <string name="login_signup_btn_text">회원가입</string>
    <string name="delivery_address">배송지</string>
    <string name="delivery_explanation">배송지에 따라 상품 정보가 달라질 수 있습니다.</string>
    <string name="add_new_address">새 배송지 추가</string>
    <string name="title_activity_webview2">WebviewActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="network_status_negative">네트워크 상태가 좋지 않습니다. 단말기의 데이터 네트워크, Wi-Fi 연결을 확인해주세요. [A1001]</string>
    <string name="dialog_button_keyword">확인</string>
    <string name="delivery_fragment_title">배송지</string>
    <string name="normal_delivery_notice_statement">오늘 주문하면 다음 날 바로 도착해요. (일요일 휴무)</string>
    <string name="early_delivery_notice_statement">매일 아침, 문 앞까지 신선함을 전해드려요.</string>
    <string name="sub_address_hint">나머지 주소를 입력해주세요.</string>
    <string name="default_address_button">기본 배송지로 저장</string>
    <string name="save_button">저장</string>
    <string name="warning_message">ⓘ 샛별배송 지역 중 배송 불가 장소 안내</string>
    <string name="warning_example">관공서 / 학교 / 병원 / 시장 / 공단지역 / 산간지역 / 백화점 등</string>
</resources>